src/index.css
body {
  /* font-family: 'Maple Mono', monospace; */
  margin: 0;
}

h1 {
  text-align: center;
  margin: 10px 0;
}

.Header {
  border: 1px solid black;
}

.btn {
  border: 1px solid black;
  background-color: white;
  padding: 5px 10px;
  cursor: pointer;
  border-radius: 10px;
}

.btn-group {
  display: flex;
  border: 1px solid black;
  border-radius: 10px;
  overflow: hidden;
}

.lang-btn-group {
  display: flex;
  border: 1px solid black;
  border-radius: 10px;
  overflow: hidden;
  margin: auto;
  width: fit-content;
}

.btn-group button {
  border: none;
  background-color: white;
  padding: 5px 10px;
  cursor: pointer;
}

.btn-group button:not(:last-child) {
  border-right: 1px solid black;
}

.btn-group button:hover {
  background-color: #f0f0f0;
}

.HeaderBtns {
  display: flex;
  justify-content: space-around;
}

.AccountStats {
  height: 300px;
  border: 1px solid black;
}

.SettingsBtn {
  background-color: black;
  position: absolute;
  top: 10px;
  right: 10px;
}

.settings {
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
}

.settingsPanel {
  display: block;
  backdrop-filter: blur(5px);
}

table {
  border-collapse: collapse;
  margin: auto;
}

thead {
  position: sticky;
  top: 0;
}

th,
td {
  border: 1px solid black;
  padding: 3px;
  text-align: center;
  color: black;
}

th {
  max-width: 85px;
  box-sizing: border-box;
  background-color: black;
  color: white;
}

td img {
  display: block;
  height: 80px;
  border: none;
}

/* Appliquer un fond sombre à chaque ligne impaire */
tbody tr:nth-child(odd) {
  background-color: white;
}

/* Appliquer un fond clair à chaque ligne paire */
tbody tr:nth-child(even) {
  background-color: gray;
}

th.racerCurrentStars {
  background-image: url('/img/Star.webp');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  min-width: 60px;
}

th.racerCurrentStarFragment {
  background-image: url('/img/StarFragment.webp');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  min-width: 30px;
}

th.currentSuperChargeLevel {
  background-image: url('/img/SuperCharge.webp');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  min-width: 60px;
}

th.TuneCoin {
  background-image: url('/img/TuneCoin.webp');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  min-width: 60px;
}

.tableContainer {
  max-width: 100vw;
  max-height: 100vh;
  overflow-x: auto;
  overflow-y: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.tableContainer::-webkit-scrollbar {
  display: none;
}

.scrollButtons {
  position: fixed;
  bottom: 20px;
  right: 20px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.scrollButton {
  background-color: #002fff;
  color: white;
  border: none;
  padding: 10px;
  border-radius: 50%;
  cursor: pointer;
  font-size: 18px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.hidden {
  display: none;
}

form {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal {
  background: white;
  padding: 20px;
  border-radius: 8px;
  min-width: 300px;
}

.statsRow {
  display: list-item;
  list-style-type: disc;
  margin-left: 20px;
  margin-top: 0;
  margin-bottom: 0;
  /* list-style-position: inside; */
}

input,
select,
.settings button {
  margin: auto;
  width: fit-content;
}

.edit-element-img,
.center-html {
  margin: auto;
}

.td-img {
  padding: 0;
}

.close-settings-btn {
  position: absolute;
  top: 0;
  right: 0;
}

.background {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-color: white;
}

